fix record css on small devices on some devices

--- a/stadsarkiv_client/static/css/record.css
+++ b/stadsarkiv_client/static/css/record.css
@@ -87,6 +87,7 @@ h3.record-header {
     .record-content {
         flex-direction: column;
         gap: unset;
+        display: block;
     }
 
     .record-content>.label {
